hphp/hack/test/typecheck/construct_default_values.php.exp
File "construct_default_values.php", line 12, characters 22-36:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "construct_default_values.php", line 12, characters 17-18:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "construct_default_values.php", line 5, characters 19-21:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "construct_default_values.php", line 12, characters 29-29:
Read access to `$this->b` before initialization (Typing[4083])
